# cobalt

./: .clangd  Bootloader.asm  Build  CMakeLists.txt  CREDITS.md  LICENSE.md  README.md  SECURITY.md  bootloader.asm  build-linux.sh  build-windows.bat  build.bat  build.sh
.github/workflows/: GenerateBadges.yml
Bootloader/: Root.asm
Include/: Math.h  Types.h
Include/Bootloader/: Math.h  Memory.h  Types.h
Include/Bootloader/EFI/: Files.h  Graphics.h  Print.h
Include/EFI/: Graphics.h  Print.h  Types.h
Include/Headers/: DOS.h  PE.h
Source/: Boot.c  Initialization.c  Kernel.c  Math.c
Source/Bootloader/: Boot.c  Math.c  Memory.c
Source/Bootloader/EFI/: Files.c  Graphics.c  Print.c
Source/EFI/: Graphics.c  Print.c
Toolchain/: CreateImage.sh  Linkscript.lds  Toolchain.cmake
bootloader/: bootloader.asm
utilities/: gdt.asm  idt.asm  put.asm
utilities/boot/: a20.asm  put.asm
